--- a/wright_cv.html
+++ b/wright_cv.html
@@ -18,16 +18,16 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":null,"date":"Updated 2021-06-11","output":{"pagedown::html_paged":{"self_contained":null,"css":["anderson-cv.css"],"number_sections":null}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2021-08-23","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"knit":"pagedown::chrome_print","title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
 
 
-<script src="wright_cv_files/header-attrs-2.8/header-attrs.js"></script>
-<script src="wright_cv_files/paged-0.14/js/config.js"></script>
-<script src="wright_cv_files/paged-0.14/js/paged.js"></script>
-<script src="wright_cv_files/paged-0.14/js/hooks.js"></script>
+<script src="wright_cv_files/header-attrs-2.10/header-attrs.js"></script>
+<script src="wright_cv_files/paged-0.15/js/config.js"></script>
+<script src="wright_cv_files/paged-0.15/js/paged.js"></script>
+<script src="wright_cv_files/paged-0.15/js/hooks.js"></script>
 
 
 
@@ -47,7 +47,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2021-06-11</h2>
+<h2 class="date">Updated 2021-08-23</h2>
 </div>
 </div>
 
@@ -56,9 +56,9 @@
 
 <div class="main">
 <div class="download">
-<p>Download PDF
-<a href="https://github.com/datalorax/anderson-cv/raw/master/anderson-cv.pdf" class="icon-block">
-<i class="fas fafooter fa-download"></i>
+<p>View online
+<a href="https://jim-wright90.github.io/wright_cv/" class="icon-block">
+<i class="fas fafooter fa-globe"></i>
 </a></p>
 </div>
 <div class = "footer",>
@@ -68,6 +68,14 @@
   
   <a href="mailto:jwrigh16@uoregon.edu" class="icon-block">
       <i class="fas fafooter fa-envelope"> | </i>
+  </a> 
+  
+  <a href="https://www.linkedin.com/in/jim-wright-a944698b/" class="icon-block">
+      <i class="fab fafooter fa-linkedin"></i>
+  </a>  
+  
+  <a href="https://orcid.org/my-orcid?orcid=0000-0003-3035-7003" class="icon-block">
+      <i class="fab fafooter fa-orcid"></i>
   </a>
   
   
@@ -121,6 +129,20 @@ right
 <tr class="even">
 <td align="left">
 <span style="color: #454545"><i class="fab fa-github"></i></span> <a href="https://github.com/Jim-Wright90">Jim-Wright90</a>
+</td>
+<td align="right">
+</td>
+</tr>
+<tr class="odd">
+<td align="left">
+<span style="color: #454545"><i class="fab fa-linkedin"></i></span> <a href="https://www.linkedin.com/in/jim-wright-a944698b/">Jim Wright</a>
+</td>
+<td align="right">
+</td>
+</tr>
+<tr class="even">
+<td align="left">
+<span style="color: #454545"><i class="fab fa-orcid"></i></span> <a href="https://orcid.org/my-orcid?orcid=0000-0003-3035-7003">Jim Wright</a>
 </td>
 <td align="right">
 </td>
@@ -187,7 +209,7 @@ right
 <tr class="odd">
 <td align="left">2021 — current</td>
 <td align="left"><span style="font-weight: 500">Clinical Supervisor</span>, University of Oregon</td>
-<td align="left">Provide clinical supervison to Master’s students in the Communication Disorders and Sciences program, primarily for treatment sessions in the School-Age Clinic and the Brain Injury and Concussion Clinic</td>
+<td align="left">Provide clinical supervision to Master’s students in the Communication Disorders and Sciences program, primarily for treatment sessions in the School-Age Clinic and the Brain Injury and Concussion Clinic</td>
 </tr>
 <tr class="even">
 <td align="left">2016 — 2017</td>
@@ -217,12 +239,40 @@ right
 </tbody>
 </table>
 </div>
+<div id="graduate-student-research-experience" class="section level2">
+<h2>Graduate Student Research Experience</h2>
+<table>
+<colgroup>
+<col width="3%" />
+<col width="33%" />
+<col width="63%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2020 — 2021</td>
+<td align="left"><span style="font-weight: 500">Data consultant</span>, Hawaii Concussion Awareness and Management Program (HCAMP)</td>
+<td align="left">Consulted with HCAMP team to conduct retrospective exploratory data analysis on Immediate Post-Concussion Assessment and Cognitive Testing (ImPACT) scores and Post-Concussion Symptom Scale (PCSS) severity ratings</td>
+</tr>
+<tr class="even">
+<td align="left">2018 — 2021</td>
+<td align="left"><span style="font-weight: 500">Co-director, Brain Injury and Concussion Clinic (BrICC)</span>, University of Oregon</td>
+<td align="left">Responsible for development of the clinic term schedule, recruitment of clients, development of assessment materials to measure student outcome, and the development of a treatment protocol for adolescents with prolonged concussion symptoms</td>
+</tr>
+<tr class="odd">
+<td align="left">2013 — 2014</td>
+<td align="left"><span style="font-weight: 500">Research assistant, NeuroSpeech Laboratory</span>, University of Illinois at Urbana-Champaign</td>
+<td align="left">Assisted Dr. Torrey Loucks in the collection, analysis, and interpretation of data from speech samples pertaining to the effects of delayed auditory feedback (DAF) on fluent speakers and speakers who stutter</td>
+</tr>
+</tbody>
+</table>
+<p>I consulted with HCAMP to complete my capstone project in order to obtain the data science specialization from the University of Oregon. Our collaboration focused on retrospectively analyzing ImPACT test scores and PCSS severity ratings. My analysis has led to one manuscript currently in progress. Data products I produced for HCAMP are accessible <a href="https://jim-wright90.shinyapps.io/HCAMP_shiny/?_ga=2.184615983.768699848.1629757508-733798040.1613499824">here</a> and <a href="https://jim-wright90.github.io/hcamp_clusters/">here</a>.</p>
+</div>
 <div id="graduate-student-teaching-experience" class="section level2">
 <h2>Graduate Student Teaching Experience</h2>
 <table>
 <colgroup>
-<col width="9%" />
-<col width="90%" />
+<col width="8%" />
+<col width="91%" />
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -237,6 +287,10 @@ right
 <td align="left">2018 — 2021</td>
 <td align="left"><span style="font-weight: 500">Mentor for graduate student capstone projects</span>, University of Oregon</td>
 </tr>
+<tr class="even">
+<td align="left">2014 — 2014</td>
+<td align="left"><span style="font-weight: 500">Teaching assistant for SHS 410: <em>Stuttering: Theory &amp; Practice</em></span>, University of Illinois at Urbana-Champaign</td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -250,19 +304,14 @@ right
 </colgroup>
 <tbody>
 <tr class="odd">
-<td align="left">2020 — 2021</td>
-<td align="left"><span style="font-weight: 500">Data Consultant</span>, Hawaii Concussion Awareness and Management Program (HCAMP)</td>
-<td align="left">Consulted with HCAMP team to conduct retrospective exploratory data analysis on Immediate Post-Concussion Assessment and Cognitive Testing (ImPACT) scores and Post-Concussion Symptom Scale (PCSS) severity ratings</td>
-</tr>
-<tr class="even">
 <td align="left">2018 — 2021</td>
 <td align="left"><span style="font-weight: 500">Co-director, Brain Injury and Concussion Clinic (BrICC)</span>, University of Oregon</td>
 <td align="left">Responsible for development of the clinic term schedule, recruitment of clients, development of assessment materials to measure student outcome, and the development of a treatment protocol for adolescents with prolonged concussion symptoms</td>
 </tr>
-<tr class="odd">
-<td align="left">2018 — 2021</td>
-<td align="left"><span style="font-weight: 500">Research Assistant</span>, Eugene Youth Concussion Management Team</td>
-<td align="left">Assisted in the development of system for client data tracking and provided clinical supervision to clients treated in the BrICC</td>
+<tr class="even">
+<td align="left">2018 — 2019</td>
+<td align="left"><span style="font-weight: 500">Academic advisor</span>, University of Oregon</td>
+<td align="left">Advised incoming freshmen students on the selection of courses for their first term enrolled in the Department of Communication Disorders &amp; Sciences</td>
 </tr>
 </tbody>
 </table>
@@ -292,11 +341,11 @@ right
 <tbody>
 <tr class="odd">
 <td align="left">2017 — current</td>
-<td align="left"><span style="font-weight: 500">License in Speech-Langauge Pathology</span>, State of Oregon</td>
+<td align="left"><span style="font-weight: 500">License in Speech-Language Pathology</span>, State of Oregon</td>
 </tr>
 <tr class="even">
 <td align="left">2015 — current</td>
-<td align="left"><span style="font-weight: 500">License in Speech-Langauge Pathology</span>, State of Illinois</td>
+<td align="left"><span style="font-weight: 500">License in Speech-Language Pathology</span>, State of Illinois</td>
 </tr>
 <tr class="odd">
 <td align="left">2015 — current</td>
@@ -332,22 +381,13 @@ right
 </div>
 <div id="peer-reviewed-publications" class="section level2">
 <h2>Peer-Reviewed Publications</h2>
-<div class = "hangingindent prpa nohead">
-
-
+<!-- <div class = "hangingindent prpa nohead"> -->
 <table>
 <colgroup>
 <col width="0%" />
-<col width="1%" />
+<col width="0%" />
 <col width="98%" />
 </colgroup>
-<thead>
-<tr class="header">
-<th align="left">year</th>
-<th align="left">count</th>
-<th align="left">cites</th>
-</tr>
-</thead>
 <tbody>
 <tr class="odd">
 <td align="left">2021</td>
@@ -399,49 +439,38 @@ right
 </div>
 <div id="professional-presentations" class="section level2">
 <h2>Professional Presentations</h2>
-<div class = "hangingindent prpa nohead">
-
-
-
-
+<!-- <div class = "hangingindent prpa nohead"> -->
 <table>
 <colgroup>
 <col width="1%" />
-<col width="1%" />
+<col width="0%" />
 <col width="97%" />
 </colgroup>
-<thead>
-<tr class="header">
-<th align="left">year</th>
-<th align="left">count</th>
-<th align="left">cites</th>
-</tr>
-</thead>
 <tbody>
 <tr class="odd">
 <td align="left">2020</td>
-<td align="left">4.</td>
+<td align="left">5.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2020, March). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the Center on Brain Injury Research and Training,Webinar.</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3.</td>
+<td align="left">4.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2020, March). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Prolonged Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the University of Oregon Department of Communication Disorders and Sciences Continuing Education Opportunity Event, Eugene, OR.</td>
 </tr>
 <tr class="odd">
 <td align="left">2019</td>
-<td align="left">2.</td>
+<td align="left">3.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2019, November). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Persistent Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the American Speech-Language Hearing Association National Conference, Orlando, FL.</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">1.</td>
+<td align="left">2.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2019, October). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the annual meeting of the Oregon Speech-Language Hearing Association State Conference, Salem, OR.</td>
 </tr>
 <tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">2014</td>
+<td align="left">1.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Loucks, T (2014, February). <em>Adaptation under Altered Auditory Feedback</em>. Paper presented at the annual meeting of the Illinois Speech-Language-Hearing Association, Rosemont, IL.</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
@@ -456,6 +485,34 @@ right
 </tbody>
 </table>
 </div>
+</div>
+<div id="honors-and-awards" class="section level1 submitted nohead">
+<h1>Honors and Awards</h1>
+<div class="hangingindent">
+
+
+<table>
+<colgroup>
+<col width="1%" />
+<col width="98%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">count</th>
+<th align="left">cite</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">2.</td>
+<td align="left"><em>Graduate Student Staff Excellence Award</em>: College of Education, University of Oregon. (2019). The purpose of the Graduate Student Staff Excellence Award is to recognize graduate employees for their hard work and service to the College of Education.</td>
+</tr>
+<tr class="even">
+<td align="left">1.</td>
+<td align="left"><em>Bullock Fund Scholarship Award</em>: Department of Communication Disorders &amp; Sciences, University of Oregon. (2019). The Bullock Fund is a state fund established through the will of Evelyn Bullock to support faculty and student research projects in Communication Disorders and Sciences. To be eligible for this award, graduate students must be making satisfactory progress toward completion of their graduate program.</td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 
