--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 
 <div class="main">
 <div class="download">
-
+<p>Download PDF
+<a href="https://jim-wright90.github.io/wright_cv/raw/master/index.pdf" class="icon-block">
+<i class="fas fafooter fa-download"></i>
+</a></p>
 </div>
 <div class = "footer",>
   <a href="https://github.com/Jim-Wright90" class="icon-block">
