CV update 8.24.21 ready to share

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
       <i class="fab fafooter fa-github"> | </i>
   </a>
   
+   <a href="mailto:jjwright90@gmail.com" class="icon-block">
+      <i class="fas fafooter fa-envelope"> | </i>
+  </a>  
+  
   <a href="mailto:jwrigh16@uoregon.edu" class="icon-block">
       <i class="fas fafooter fa-envelope"> | </i>
   </a> 
@@ -98,9 +102,7 @@ About Me
 <p>
 I am primarily interested in multidisciplinary concussion management and the development of empirically driven return-to-learn guidelines for students recovering from concussion.
 </p>
-<p>
-The style and format of this CV developed by <a href="https://github.com/datalorax">Daniel Anderson, Ph.D.</a>
-</p>
+<!-- The style and format of this CV developed by [Daniel Anderson, Ph.D.](https://github.com/datalorax)  -->
 </div>
 <div class="col- grid-item">
 <h2 class="box" id="contact-information">
@@ -121,26 +123,33 @@ right
 <tbody>
 <tr class="odd">
 <td align="left">
-<span style="color: #454545"><i class="fas fa-envelope"></i></span> <a href="mailto:jwrigh16@uoregon.edu" class="email">jwrigh16@uoregon.edu</a>
+<span style="color: #454545"><i class="fas fa-envelope"></i></span> <a href="mailto:jjwright90@gmail.com" class="email">jjwright90@gmail.com</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="even">
 <td align="left">
-<span style="color: #454545"><i class="fab fa-github"></i></span> <a href="https://github.com/Jim-Wright90">Jim-Wright90</a>
+<span style="color: #454545"><i class="fas fa-envelope"></i></span> <a href="mailto:jwrigh16@uoregon.edu" class="email">jwrigh16@uoregon.edu</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="odd">
 <td align="left">
-<span style="color: #454545"><i class="fab fa-linkedin"></i></span> <a href="https://www.linkedin.com/in/jim-wright-a944698b/">Jim Wright</a>
+<span style="color: #454545"><i class="fab fa-github"></i></span> <a href="https://github.com/Jim-Wright90">Jim-Wright90</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="even">
+<td align="left">
+<span style="color: #454545"><i class="fab fa-linkedin"></i></span> <a href="https://www.linkedin.com/in/jim-wright-a944698b/">Jim Wright</a>
+</td>
+<td align="right">
+</td>
+</tr>
+<tr class="odd">
 <td align="left">
 <span style="color: #454545"><i class="fab fa-orcid"></i></span> <a href="https://orcid.org/my-orcid?orcid=0000-0003-3035-7003">Jim Wright</a>
 </td>
@@ -470,7 +479,7 @@ right
 <tr class="odd">
 <td align="left">2014</td>
 <td align="left">1.</td>
-<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Loucks, T (2014, February). <em>Adaptation under Altered Auditory Feedback</em>. Paper presented at the annual meeting of the Illinois Speech-Language-Hearing Association, Rosemont, IL.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Loucks, T (2014, February). <em>Adaptation under Altered Auditory Feedback</em>. Poster presented at the annual meeting of the Illinois Speech-Language-Hearing Association, Rosemont, IL.</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
