--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2021-08-24","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-02-23","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
 
 
-<script src="index_files/header-attrs-2.10/header-attrs.js"></script>
+<script src="index_files/header-attrs-2.11/header-attrs.js"></script>
 <script src="index_files/paged-0.15/js/config.js"></script>
 <script src="index_files/paged-0.15/js/paged.js"></script>
 <script src="index_files/paged-0.15/js/hooks.js"></script>
@@ -47,7 +47,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2021-08-24</h2>
+<h2 class="date">Updated 2022-02-23</h2>
 </div>
 </div>
 
@@ -67,6 +67,10 @@
   </a>
   
    <a href="mailto:jjwright90@gmail.com" class="icon-block">
+      <i class="fas fafooter fa-envelope"> | </i>
+  </a>  
+  
+   <a href="mailto:jim.wright@marzanoresearch.com" class="icon-block">
       <i class="fas fafooter fa-envelope"> | </i>
   </a>  
   
@@ -130,26 +134,33 @@ right
 </tr>
 <tr class="even">
 <td align="left">
-<span style="color: #454545"><i class="fas fa-envelope"></i></span> <a href="mailto:jwrigh16@uoregon.edu" class="email">jwrigh16@uoregon.edu</a>
+<span style="color: #454545"><i class="fas fa-envelope"></i></span> <a href="mailto:jim.wright@marzanoresearch.com" class="email">jim.wright@marzanoresearch.com</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="odd">
 <td align="left">
-<span style="color: #454545"><i class="fab fa-github"></i></span> <a href="https://github.com/Jim-Wright90">Jim-Wright90</a>
+<span style="color: #454545"><i class="fas fa-envelope"></i></span> <a href="mailto:jwrigh16@uoregon.edu" class="email">jwrigh16@uoregon.edu</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="even">
 <td align="left">
-<span style="color: #454545"><i class="fab fa-linkedin"></i></span> <a href="https://www.linkedin.com/in/jim-wright-a944698b/">Jim Wright</a>
+<span style="color: #454545"><i class="fab fa-github"></i></span> <a href="https://github.com/Jim-Wright90">Jim-Wright90</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="odd">
+<td align="left">
+<span style="color: #454545"><i class="fab fa-linkedin"></i></span> <a href="https://www.linkedin.com/in/jim-wright-a944698b/">Jim Wright</a>
+</td>
+<td align="right">
+</td>
+</tr>
+<tr class="even">
 <td align="left">
 <span style="color: #454545"><i class="fab fa-orcid"></i></span> <a href="https://orcid.org/my-orcid?orcid=0000-0003-3035-7003">Jim Wright</a>
 </td>
@@ -216,31 +227,36 @@ right
 </thead>
 <tbody>
 <tr class="odd">
+<td align="left">2022 — current</td>
+<td align="left"><span style="font-weight: 500">Research Associate</span>, Marzano Research</td>
+<td align="left">Support multiple aspects of research and evaluation projects designed to inform educational improvement through the provision of technical support and communication of findings</td>
+</tr>
+<tr class="even">
 <td align="left">2021 — current</td>
 <td align="left"><span style="font-weight: 500">Clinical Supervisor</span>, University of Oregon</td>
 <td align="left">Provide clinical supervision to Master’s students in the Communication Disorders and Sciences program, primarily for treatment sessions in the School-Age Clinic and the Brain Injury and Concussion Clinic</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2016 — 2017</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Amita Health Care: Alexian Brothers Medical Center – <em>Elk Grove Village, IL</em></td>
 <td align="left">Provided swallowing, speech, and language assessment and treatment in an acute care setting on a PRN basis</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2015 — 2017</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago Public Schools – <em>Chicago, IL</em></td>
 <td align="left">Provided direct and indirect speech and language services in the pre-K through grade 12 setting across a total of 4 schools</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2015 — 2016</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Education Solutions, LLC – <em>Chicago, IL</em></td>
 <td align="left">Provided direct speech and language therapy for students in private schools</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2014 — 2015</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago International Charter Schools – <em>Chicago, IL</em></td>
 <td align="left">Provided direct and indirect speech and language services to a caseload of 40 students across one elementary school and one high school</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2014 — 2014</td>
 <td align="left"><span style="font-weight: 500">Graduate Student Clinician</span>, Edward Hines, Jr. VA Hospital – <em>Hines, IL</em></td>
 <td align="left">Completed 10-week graduate student rotation where I obtained experience providing inpatient and outpatient speech therapy services to veterans</td>
@@ -285,18 +301,14 @@ right
 </colgroup>
 <tbody>
 <tr class="odd">
-<td align="left">2021 — 2021</td>
-<td align="left"><span style="font-weight: 500">Course instructor for CDS 663: <em>Management of Acquired Cognitive Disorders</em></span>, University of Oregon</td>
-</tr>
-<tr class="even">
 <td align="left">2017 — 2021</td>
 <td align="left"><span style="font-weight: 500">Clinical supervisor and co-director for the Brain Injury and Concussion Clinic</span>, University of Oregon</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2018 — 2021</td>
 <td align="left"><span style="font-weight: 500">Mentor for graduate student capstone projects</span>, University of Oregon</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2014 — 2014</td>
 <td align="left"><span style="font-weight: 500">Teaching assistant for SHS 410: <em>Stuttering: Theory &amp; Practice</em></span>, University of Illinois at Urbana-Champaign</td>
 </tr>
@@ -378,6 +390,32 @@ right
 <tr class="even">
 <td align="left">2017 — current</td>
 <td align="left"><span style="font-weight: 500">Picture Exchange Communication System Level 1</span>, Chicago Public Schools – Chicago, IL</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<div id="teaching" class="section level1">
+<h1>Teaching</h1>
+<div class="inote">
+<p>Icons link to additional content</p>
+</div>
+<div id="courses-taught" class="section level2">
+<h2>Courses Taught</h2>
+<p>All courses taught at the University of Oregon Department of Communication Disorders &amp; Sciences.</p>
+<table>
+<colgroup>
+<col width="0%" />
+<col width="99%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">1.</td>
+<td align="left"><em>Course instructor for CDS 431: Beginning Clinical Methods</em>. (Spring, 2022). CRN: 20957; 3 credit hours.<sp></sp><a href="https://github.com/Jim-Wright90/cds431_sp22.git"><i class="fab falink fa-github"></i></a><sp></sp><a href="https://jim-wright90.github.io/cds431_sp22/"><i class="fas falink fa-globe"></i></a></td>
+</tr>
+<tr class="even">
+<td align="left">2.</td>
+<td align="left"><em>Course instructor for CDS 663: Management of Acquired Cognitive Disorders</em>. (Winter, 2021). CRN: 31365; 4 credit hours.<sp></sp><a href="https://github.com/Jim-Wright90/cds_663_winter_2021.git"><i class="fab falink fa-github"></i></a><sp></sp><a href="https://jim-wright90.github.io/cds_663_winter_2021/"><i class="fas falink fa-globe"></i></a></td>
 </tr>
 </tbody>
 </table>
