added job summary to header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-02-23","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-03-02","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -47,7 +47,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2022-02-23</h2>
+<h2 class="date">Updated 2022-03-02</h2>
 </div>
 </div>
 
@@ -93,7 +93,7 @@
 <div class = "last", id="bloc2">Wright</div>
 </div>
 <div id = "position", class = "position">
-Clinical Supervisor at the University of Oregon Department of Communication Disorders and Sciences
+Research Associate at Marzano Research and Clinical Supervisor at the University of Oregon Department of Communication Disorders and Sciences
 </div>
 <div id = "sub", class = "sub">
 Curriculum Vita
