dissertation pub added to CV

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-03-02","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-05-23","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -47,7 +47,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2022-03-02</h2>
+<h2 class="date">Updated 2022-05-23</h2>
 </div>
 </div>
 
@@ -437,19 +437,19 @@ right
 </colgroup>
 <tbody>
 <tr class="odd">
+<td align="left">2022</td>
+<td align="left">3.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span>, Sohlberg, M.M., McIntosh, K., Seeley, J., Hadley, W., Blitz, D. &amp; Lowham, E (2022). What is the effect of personalized cognitive strategy instruction on facilitating return-to-learn for individuals experiencing prolonged concussion symptoms. <em>Neuropsychological Rehabilitation</em>. <a href="https://www.tandfonline.com/doi/full/10.1080/09602011.2022.2074467">doi: https://doi.org/10.1080/09602011.2022.2074467</a></td>
+</tr>
+<tr class="even">
 <td align="left">2021</td>
 <td align="left">2.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2021). The implementation of a personalized dynamic approach for the management of prolonged concussion symptoms. <em>American Journal of Speech-Language Pathology</em>. 1-14. <a href="https://pubs.asha.org/doi/10.1044/2021_AJSLP-20-00306">doi: https://doi.org/10.1044/2021_AJSLP-20-00306</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2020</td>
 <td align="left">1.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span>, Sohlberg, M.M., Watson-Stites, R., &amp; McCart, M (2020). Identification of key therapy ingredients for SLPSs serving on multidisciplinary teams facilitating return to learn for students with prolonged cognitive effects after concussion: A retrospective analysis. <em>Topics in Language Disorders</em>. <em>40</em>(1), 6-35. <a href="https://journals.lww.com/topicsinlanguagedisorders/Abstract/2020/01000/Identification_of_Key_Therapy_Ingredients_for_SLPs.3.aspx">doi: https://doi.org/10.1097/TLD.0000000000000198</a></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
