page numbers for published dissertation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-05-23","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-07-05","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -47,7 +47,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2022-05-23</h2>
+<h2 class="date">Updated 2022-07-05</h2>
 </div>
 </div>
 
@@ -439,7 +439,7 @@ right
 <tr class="odd">
 <td align="left">2022</td>
 <td align="left">3.</td>
-<td align="left"><span style="font-weight: 500">Wright, J.</span>, Sohlberg, M.M., McIntosh, K., Seeley, J., Hadley, W., Blitz, D. &amp; Lowham, E (2022). What is the effect of personalized cognitive strategy instruction on facilitating return-to-learn for individuals experiencing prolonged concussion symptoms. <em>Neuropsychological Rehabilitation</em>. <a href="https://www.tandfonline.com/doi/full/10.1080/09602011.2022.2074467">doi: https://doi.org/10.1080/09602011.2022.2074467</a></td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span>, Sohlberg, M.M., McIntosh, K., Seeley, J., Hadley, W., Blitz, D. &amp; Lowham, E (2022). What is the effect of personalized cognitive strategy instruction on facilitating return-to-learn for individuals experiencing prolonged concussion symptoms. <em>Neuropsychological Rehabilitation</em>. 1-30. <a href="https://www.tandfonline.com/doi/full/10.1080/09602011.2022.2074467">doi: https://doi.org/10.1080/09602011.2022.2074467</a></td>
 </tr>
 <tr class="even">
 <td align="left">2021</td>
