--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-07-05","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-07-14","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -47,7 +47,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2022-07-05</h2>
+<h2 class="date">Updated 2022-07-14</h2>
 </div>
 </div>
 
@@ -263,6 +263,7 @@ right
 </tr>
 </tbody>
 </table>
+<p>A specific example of the work I complete for Marzano Research is the development of a data dashboard for Kamehameha Schools in the State of Hawaii. The dashboard is accessible <a href="https://marzanoresearch.shinyapps.io/dashboard_version3/">here</a>.</p>
 </div>
 <div id="graduate-student-research-experience" class="section level2">
 <h2>Graduate Student Research Experience</h2>
@@ -290,7 +291,7 @@ right
 </tr>
 </tbody>
 </table>
-<p>I consulted with HCAMP to complete my capstone project in order to obtain the data science specialization from the University of Oregon. Our collaboration focused on retrospectively analyzing ImPACT test scores and PCSS severity ratings. My analysis has led to one manuscript currently in progress. Data products I produced for HCAMP are accessible <a href="https://jim-wright90.shinyapps.io/HCAMP_shiny/?_ga=2.184615983.768699848.1629757508-733798040.1613499824">here</a> and <a href="https://jim-wright90.github.io/hcamp_clusters/">here</a>.</p>
+<p>I consulted with HCAMP to complete my capstone project in order to obtain the data science specialization from the University of Oregon. Our collaboration focused on retrospectively analyzing ImPACT test scores and PCSS severity ratings. Data products I produced for HCAMP are accessible <a href="https://jim-wright90.shinyapps.io/HCAMP_shiny/?_ga=2.184615983.768699848.1629757508-733798040.1613499824">here</a> and <a href="https://jim-wright90.github.io/hcamp_clusters/">here</a>.</p>
 </div>
 <div id="graduate-student-teaching-experience" class="section level2">
 <h2>Graduate Student Teaching Experience</h2>
@@ -356,10 +357,18 @@ right
 <h2>Certification and Licensure</h2>
 <table>
 <colgroup>
-<col width="12%" />
-<col width="87%" />
+<col width="11%" />
+<col width="88%" />
 </colgroup>
 <tbody>
+<tr class="odd">
+<td align="left">2022 — current</td>
+<td align="left"><span style="font-weight: 500">Certified reviewer group design research studies</span>, What Works Clearinghouse</td>
+</tr>
+<tr class="even">
+<td align="left">2022 — current</td>
+<td align="left"><span style="font-weight: 500">Certified reviewer single-case experimental design research studies</span>, What Works Clearinghouse</td>
+</tr>
 <tr class="odd">
 <td align="left">2017 — current</td>
 <td align="left"><span style="font-weight: 500">License in Speech-Language Pathology</span>, State of Oregon</td>
