October 2022 CBIRT presentation added

--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-07-14","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-10-17","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
 
 
-<script src="index_files/header-attrs-2.11/header-attrs.js"></script>
-<script src="index_files/paged-0.15/js/config.js"></script>
-<script src="index_files/paged-0.15/js/paged.js"></script>
-<script src="index_files/paged-0.15/js/hooks.js"></script>
+<script src="index_files/paged-0.19/js/config.js"></script>
+<script src="index_files/paged-0.19/js/paged.js"></script>
+<script src="index_files/paged-0.19/js/hooks.js"></script>
 
 
 
@@ -47,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2022-07-14</h2>
+<h2 class="date">Updated 2022-10-17</h2>
 </div>
 </div>
 
@@ -104,7 +103,9 @@ Curriculum Vita
 About Me
 </h2>
 <p>
-I am primarily interested in multidisciplinary concussion management and the development of empirically driven return-to-learn guidelines for students recovering from concussion.
+I am primarily interested in multidisciplinary concussion management
+and the development of empirically driven return-to-learn guidelines for
+students recovering from concussion.
 </p>
 <!-- The style and format of this CV developed by [Daniel Anderson, Ph.D.](https://github.com/datalorax)  -->
 </div>
@@ -114,6 +115,10 @@ Contact information
 </h2>
 <div class="info-box">
 <table>
+<colgroup>
+<col width="53%" />
+<col width="46%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">
@@ -127,42 +132,51 @@ right
 <tbody>
 <tr class="odd">
 <td align="left">
-<span style="color: #454545"><i class="fas fa-envelope"></i></span> <a href="mailto:jjwright90@gmail.com" class="email">jjwright90@gmail.com</a>
+<span style="color: #454545"><i class="fas fa-envelope"></i></span>
+<a href="mailto:jjwright90@gmail.com" class="email">jjwright90@gmail.com</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="even">
 <td align="left">
-<span style="color: #454545"><i class="fas fa-envelope"></i></span> <a href="mailto:jim.wright@marzanoresearch.com" class="email">jim.wright@marzanoresearch.com</a>
+<span style="color: #454545"><i class="fas fa-envelope"></i></span> <a
+href="mailto:jim.wright@marzanoresearch.com"
+class="email">jim.wright@marzanoresearch.com</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="odd">
 <td align="left">
-<span style="color: #454545"><i class="fas fa-envelope"></i></span> <a href="mailto:jwrigh16@uoregon.edu" class="email">jwrigh16@uoregon.edu</a>
+<span style="color: #454545"><i class="fas fa-envelope"></i></span>
+<a href="mailto:jwrigh16@uoregon.edu" class="email">jwrigh16@uoregon.edu</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="even">
 <td align="left">
-<span style="color: #454545"><i class="fab fa-github"></i></span> <a href="https://github.com/Jim-Wright90">Jim-Wright90</a>
+<span style="color: #454545"><i class="fab fa-github"></i></span> <a
+href="https://github.com/Jim-Wright90">Jim-Wright90</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="odd">
 <td align="left">
-<span style="color: #454545"><i class="fab fa-linkedin"></i></span> <a href="https://www.linkedin.com/in/jim-wright-a944698b/">Jim Wright</a>
+<span style="color: #454545"><i class="fab fa-linkedin"></i></span> <a
+href="https://www.linkedin.com/in/jim-wright-a944698b/">Jim
+Wright</a>
 </td>
 <td align="right">
 </td>
 </tr>
 <tr class="even">
 <td align="left">
-<span style="color: #454545"><i class="fab fa-orcid"></i></span> <a href="https://orcid.org/my-orcid?orcid=0000-0003-3035-7003">Jim Wright</a>
+<span style="color: #454545"><i class="fab fa-orcid"></i></span> <a
+href="https://orcid.org/my-orcid?orcid=0000-0003-3035-7003">Jim
+Wright</a>
 </td>
 <td align="right">
 </td>
@@ -181,8 +195,8 @@ right
 <h2>Education</h2>
 <table>
 <colgroup>
-<col width="5%" />
-<col width="94%" />
+<col width="7%" />
+<col width="92%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -414,8 +428,8 @@ right
 <p>All courses taught at the University of Oregon Department of Communication Disorders &amp; Sciences.</p>
 <table>
 <colgroup>
-<col width="0%" />
-<col width="99%" />
+<col width="1%" />
+<col width="98%" />
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -440,7 +454,7 @@ right
 <!-- <div class = "hangingindent prpa nohead"> -->
 <table>
 <colgroup>
-<col width="0%" />
+<col width="1%" />
 <col width="0%" />
 <col width="98%" />
 </colgroup>
@@ -504,34 +518,34 @@ right
 </colgroup>
 <tbody>
 <tr class="odd">
+<td align="left">2022</td>
+<td align="left">6.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> (2022, October). <em>Translating Executive Functioning Challenges into Treatment Implementation to Support Return-to-Learn in the mTBI Population</em>. Paper presented at the Center on Brain Injury Research and Training,Webinar.</td>
+</tr>
+<tr class="even">
 <td align="left">2020</td>
 <td align="left">5.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2020, March). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the Center on Brain Injury Research and Training,Webinar.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left"></td>
 <td align="left">4.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2020, March). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Prolonged Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the University of Oregon Department of Communication Disorders and Sciences Continuing Education Opportunity Event, Eugene, OR.</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2019</td>
 <td align="left">3.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2019, November). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Persistent Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the American Speech-Language Hearing Association National Conference, Orlando, FL.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left"></td>
 <td align="left">2.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2019, October). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the annual meeting of the Oregon Speech-Language Hearing Association State Conference, Salem, OR.</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2014</td>
 <td align="left">1.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Loucks, T (2014, February). <em>Adaptation under Altered Auditory Feedback</em>. Poster presented at the annual meeting of the Illinois Speech-Language-Hearing Association, Rosemont, IL.</td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
