updated KS dashboard link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-10-17","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2022-10-20","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2022-10-17</h2>
+<h2 class="date">Updated 2022-10-20</h2>
 </div>
 </div>
 
@@ -277,7 +277,7 @@ Wright</a>
 </tr>
 </tbody>
 </table>
-<p>A specific example of the work I complete for Marzano Research is the development of a data dashboard for Kamehameha Schools in the State of Hawaii. The dashboard is accessible <a href="https://marzanoresearch.shinyapps.io/dashboard_version3/">here</a>.</p>
+<p>A specific example of the work I complete for Marzano Research is the development of a data dashboard for Kamehameha Schools in the State of Hawaii. The dashboard is accessible <a href="https://marzanoresearch.shinyapps.io/ks_version4/?_ga=2.111201984.530676107.1666295282-750961707.1634592294">here</a>.</p>
 </div>
 <div id="graduate-student-research-experience" class="section level2">
 <h2>Graduate Student Research Experience</h2>
